# LangGraph-agent-on-MongoDB

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: ci.yml
src/: .env.example  config.py  serve.py
src/components/: prompts.py
src/db/: db.py  fetch_sample_data.py  scheme.py
src/graph/: graph.py  llm.py  nodes.py
src/models/: db_models.py  graph_models.py
src/vector_store/: few_shots.py  vector_store.py
